Bug: 36904 Add scrollbar to buddy list when it's long
http://bugzilla.zimbra.com/show_bug.cgi?id=36904

Copied from Perforce
 Change: 152900

--- a/WebRoot/css/zm.css
+++ b/WebRoot/css/zm.css
@@ -1912,7 +1912,7 @@ HTML>BODY .appt-selected .appt_allday_body
 	background-color: white;
 }
 
-.ZmTaskbarContentParent .ZmImOverview {
+.ZmTaskbarContentParent .ZmImOverview .DwtTree {
 	max-height:400px;
 	max-width:200px;
 }
